# vocabcli

./: README.md  pyproject.toml
tests/: test_vocabcli.py
vocabcli/: __init__.py  __main__.py  cli.py  config.py  database.py  vocabcli.py
