[tool.poetry]
name = "vocabcli"
version = "0.1.0"
description = ""
authors = ["Ahmet Caliskan <root@systemalert.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
